# nexrad-mapbox-backend

./: .gitignore  README.md  api.py  get_nexrad_data_level2.py  get_nexrad_data_level3.py  helpers.py  pyproject.toml  read_and_plot_nexrad_level3.py  requirements.txt  run.bat  server.py  utils.py  waitress_server.py
public/codes/: options.json
public/flags/: update_flags.json
public/lists/: nexrad_level2_reflectivity_files.json  nexrad_level2_reflectivity_files_mod.json  nexrad_level2_reflectivity_files_orig.json  nexrad_level3_hydrometeor_files.json  nexrad_level3_precipitation_files.json  updated_data.json
scripts/: process_level2.py  process_level3.py
src/nexrad_backend/: config.py
src/nexrad_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nexrad_backend/api/: app_factory.py  routes.py
src/nexrad_backend/processing/: common.py  level2.py  level3.py
src/nexrad_backend/services/: metadata_service.py  nexrad_fetcher.py  s3_service.py
src/nexrad_backend/utils/: list_helpers.py
